@@ -15,6 +15,7 @@ installation-guide (2008xxxx) UNRELEASED; urgency=medium
   [ Joey Hess ]
   * Comment out partman-auto/disk setting in preseed since lenny d-i will
     automatically work w/o it if there's just 1 disk. Closes: #490287
+  * Document hw-detect/load_firmware. Closes: #493845
 
  -- Frans Pop <fjp@debian.org>  Wed, 02 Jul 2008 17:06:28 +0200
 
